start-backgroung + checking net

--- a/index.html
+++ b/index.html
@@ -2,34 +2,35 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
     <title>Shpora</title>
 </head>
 <body>
 <header>
-<!--    <h1>Shpora</h1>-->
-<nav>
-    <ul class="menu">
-        <li><a href="#" class="top-menu">Gallery</a></li>
-        <li class="top"><a href="#" class="top-menu">News
-            <ul class="submenu">
-                <li>
-                    <a href="#">cats</a>
-                </li>
-                <li>
-                    <a href="#">dogs</a>
+    <div class="container">
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#" class="top-menu">News</a>
+                    <ul class="submenu">
+                        <li>
+                            <a href="text.html">cats</a>
+                        </li>
+                        <li>
+                            <a href="#">dogs</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
-        </a></li>
-    </ul>
-
-
-    <form class="searchAnything">
-        <label>
-            Подпись: <input type="text" name="search">
-        </label>
-    </form>
-</nav>
+            <form class="searchAnything">
+                <label>
+                    Подпись: <input type="text" name="search">
+                </label>
+            </form>
+        </nav>
+        <div class="clearfix"></div>
+    </div>
 </header>
 <main>
     <article class="cat">
