the first version of the cap

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
             <form class="searchAnything">
                 <label>
-                    Подпись: <input type="text" name="search">
+                    <input type="text" name="search"><span> : search</span>
                 </label>
             </form>
         </nav>
