first page card - cat

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             освещенности. Однако такой размер глаз затрудняет постоянную перефокусировку с близких объектов на дальние и
             обратно. Автор книги Cat Sense Джон Брэдшоу отмечает, что по этой причине зрение кошки подстраивается под
             среду ее обитания: уличные животные, как правило, дальнозоркие, а большинство домашних — близорукие.</p>
+        <div class="clearfix"></div>
     </article>
     <!--    <aside>-->
     <!--        <h2>Связанные темы</h2>-->
