--- a/index.html
+++ b/index.html
@@ -7,56 +7,82 @@
     <title>Shpora</title>
 </head>
 <body>
-<header>
-    <div class="container">
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#" class="top-menu">News</a>
-                    <ul class="submenu">
-                        <li>
-                            <a href="text.html">cats</a>
-                        </li>
-                        <li>
-                            <a href="#">dogs</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="searchAnything">
-                <label>
-                    <input type="text" name="search"><span> : search</span>
-                </label>
-            </form>
-        </nav>
-        <div class="clearfix"></div>
-    </div>
-</header>
-<main>
-    <article class="cat">
-        <img src="whiteCat.jpg" alt="white cat">
-        <h3>Зачем кошкам такие большие глаза?</h3>
-        <p>Огромные глаза относительно тела развились у кошачьих из-за необходимости охотиться в условиях низкой
-            освещенности. Однако такой размер глаз затрудняет постоянную перефокусировку с близких объектов на дальние и
-            обратно. Автор книги Cat Sense Джон Брэдшоу отмечает, что по этой причине зрение кошки подстраивается под
-            среду ее обитания: уличные животные, как правило, дальнозоркие, а большинство домашних — близорукие.</p>
-        <div class="clearfix"></div>
-    </article>
-    <!--    <aside>-->
-    <!--        <h2>Связанные темы</h2>-->
+<div class="wrapper">
+    <header>
+        <div class="container">
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#" class="top-menu">News</a>
+                        <ul class="submenu">
+                            <li>
+                                <a href="text.html">cats</a>
+                            </li>
+                            <li>
+                                <a href="#">dogs</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="searchAnything">
+                    <label>
+                        <input type="text" name="search"><span> : search</span>
+                    </label>
+                </form>
+            </nav>
+            <div class="clearfix"></div>
+        </div>
+    </header>
+    <main class="main">
+        <article class="cat">
+            <img src="whiteCat.jpg" alt="white cat">
+            <h3>Зачем кошкам такие большие глаза?</h3>
+            <p>Огромные глаза относительно тела развились у кошачьих из-за необходимости охотиться в условиях низкой
+                освещенности. Однако такой размер глаз затрудняет постоянную перефокусировку с близких объектов на
+                дальние и
+                обратно. Автор книги Cat Sense Джон Брэдшоу отмечает, что по этой причине зрение кошки подстраивается
+                под
+                среду ее обитания: уличные животные, как правило, дальнозоркие, а большинство домашних — близорукие.</p>
+            <div class="clearfix"></div>
+        </article>
+        <article class="cat">
+            <img src="whiteCat.jpg" alt="white cat">
+            <h3>Зачем кошкам такие большие глаза?</h3>
+            <p>Огромные глаза относительно тела развились у кошачьих из-за необходимости охотиться в условиях низкой
+                освещенности. Однако такой размер глаз затрудняет постоянную перефокусировку с близких объектов на
+                дальние и
+                обратно. Автор книги Cat Sense Джон Брэдшоу отмечает, что по этой причине зрение кошки подстраивается
+                под
+                среду ее обитания: уличные животные, как правило, дальнозоркие, а большинство домашних — близорукие.</p>
+            <div class="clearfix"></div>
+        </article>
+        <article class="cat">
+            <img src="whiteCat.jpg" alt="white cat">
+            <h3>Зачем кошкам такие большие глаза?</h3>
+            <p>Огромные глаза относительно тела развились у кошачьих из-за необходимости охотиться в условиях низкой
+                освещенности. Однако такой размер глаз затрудняет постоянную перефокусировку с близких объектов на
+                дальние и
+                обратно. Автор книги Cat Sense Джон Брэдшоу отмечает, что по этой причине зрение кошки подстраивается
+                под
+                среду ее обитания: уличные животные, как правило, дальнозоркие, а большинство домашних — близорукие.</p>
+            <div class="clearfix"></div>
+        </article>
 
-    <!--        <ul>-->
-    <!--            <li><a href="#">Мне нравится стоять рядом с берегом моря</a></li>-->
-    <!--            <li><a href="#">>Мне нравится стоять рядом с морем</a></li>-->
-    <!--            <li><a href="#">Даже на севере Англии</a></li>-->
-    <!--            <li><a href="#">Здесь не перестаёт дождь</a></li>-->
-    <!--            <li><a href="#">Лаааадно...</a></li>-->
-    <!--        </ul>-->
-    <!--    </aside>-->
-    <footer>
-        <p>©Авторские права никому не принадлежат, 2050. Все права защищены.</p>
+        <!--    <aside>-->
+        <!--        <h2>Связанные темы</h2>-->
+
+        <!--        <ul>-->
+        <!--            <li><a href="#">Мне нравится стоять рядом с берегом моря</a></li>-->
+        <!--            <li><a href="#">>Мне нравится стоять рядом с морем</a></li>-->
+        <!--            <li><a href="#">Даже на севере Англии</a></li>-->
+        <!--            <li><a href="#">Здесь не перестаёт дождь</a></li>-->
+        <!--            <li><a href="#">Лаааадно...</a></li>-->
+        <!--        </ul>-->
+        <!--    </aside>-->
+    </main>
+    <footer class="footer">
+        <p>©Авторские права никому не принадлежат, 2050.</p>
     </footer>
-</main>
-
+</div>
 </body>
 </html>
