ready. without adaptation for mobile

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="container">
             <nav class="menu">
                 <ul>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="htmlFails/galery.html">Gallery</a></li>
                     <li><a href="#" class="top-menu">News</a>
                         <ul class="submenu">
                             <li>
-                                <a href="text.html">cats</a>
+                                <a href="htmlFails/text.html">cats</a>
                             </li>
                             <li>
-                                <a href="#">dogs</a>
+                                <a href="htmlFails/dog.html">dogs</a>
                             </li>
                         </ul>
                     </li>
@@ -35,14 +35,11 @@
     </header>
     <main class="main">
         <article class="cat">
-            <img src="whiteCat.jpg" alt="white cat">
-            <h3>Зачем кошкам такие большие глаза?</h3>
-            <p>Огромные глаза относительно тела развились у кошачьих из-за необходимости охотиться в условиях низкой
-                освещенности. Однако такой размер глаз затрудняет постоянную перефокусировку с близких объектов на
-                дальние и
-                обратно. Автор книги Cat Sense Джон Брэдшоу отмечает, что по этой причине зрение кошки подстраивается
-                под
-                среду ее обитания: уличные животные, как правило, дальнозоркие, а большинство домашних — близорукие.</p>
+            <img src="srcCard/catAndDog.jpg" alt="cat And Dog">
+            <h3>Животные уменьшают стресс и тревогу</h3>
+            <p>Испытываете стресс? Врачи могут посоветовать вам завести домашнее животное. Взаимодействие с животными
+                поднимает уровень гормона окситоцина, который уменьшает уровень другого гормона, вызывающего стресс –
+                кортизола.</p>
             <div class="clearfix"></div>
         </article>
 
@@ -59,7 +56,7 @@
         <!--    </aside>-->
     </main>
     <footer class="footer">
-        <p>©Авторские права никому не принадлежат, 2050.</p>
+        <p>©Авторские права принадлежат котикам!, 12022.</p>
     </footer>
 </div>
 </body>
